--- a/portal/branch/option/display.html
+++ b/portal/branch/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="branch/{{global.url}}">
 	{{forms.make(form.branch)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
