--- a/portal/group/option/display.html
+++ b/portal/group/option/display.html
@@ -3,5 +3,5 @@
 <form class="ajx" method="post" action="group/{{global.url}}">
 	{{forms.make(form.group)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
