dataTable of plan, place, branch

--- a/portal/place/option/display.html
+++ b/portal/place/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="place/{{global.url}}">
 	{{forms.make(form.place)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
