--- a/portal/plan/option/display.html
+++ b/portal/plan/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="plan/{{global.url}}">
 	{{forms.make(form.plan)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
