--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -1,147 +1,16 @@
 {% extends layout %}
 {% block content %}
-<!-- ************************************************************************************** -->
-<!-- popup -->
-<style>
-	/*body { font-size: 62.5%; }*/
-	/*label, input { display:block; }*/
-	input.text { margin-bottom:12px; width:95%; padding: .4em; }
-	fieldset { padding:0; border:0; margin-top:25px; }
-	h1 { font-size: 1.2em; margin: .6em 0; }
-	div#users-contain { width: 350px; margin: 20px 0; }
-	div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-	div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-	.ui-dialog .ui-state-error { padding: .3em; }
-	.validateTips { border: 1px solid transparent; padding: 0.3em; }
-	.ui-dialog {
-		width: 90% !important;
-		height: 90% !important;
-		z-index: 1000;
-	}
-	.ui-dialog-content {
-		height: 85% !important;
-	}
 
-	iframe {
-		width: 100%;
-		height: 100%;
-		outline: none;
-		border: none;
-	}
-	@media print {
-	
-	}
-</style>
-
-
-
-<div id="dialog-form" title="نمایش افراد جهت ثبت در کلاس">
-	<iframe src="classification/search/classesid={{global.classesid}}"></iframe>
-</div>
-
-
-<div id="users-contain" class="ui-widget"></div>
-<button id="create-user">نمایش افراد جهت ثبت در کلاس</button>
-
+<a href="users/status=list" target="_blank" >نمایش افراد جهت ثبت در کلاس</a>
 
 <!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
 
-
 <!-- classes list -->
 <div class="class-detail">
 	{{ tagMaker.list(classes_list) }}
 </div>
 
-<script>
-	$(document).ready(function(){
-		var dialog, form,
-		
-		emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
-		name = $( "#name" ),
-		email = $( "#email" ),
-		password = $( "#password" ),
-		allFields = $( [] ).add( name ).add( email ).add( password ),
-		tips = $( ".validateTips" );
-
-		function updateTips( t ) {
-			tips
-			.text( t )
-			.addClass( "ui-state-highlight" );
-			setTimeout(function() {
-				tips.removeClass( "ui-state-highlight", 1500 );
-			}, 500 );
-		}
-
-		function checkLength( o, n, min, max ) {
-			if ( o.val().length > max || o.val().length < min ) {
-				o.addClass( "ui-state-error" );
-				updateTips( "Length of " + n + " must be between " +
-					min + " and " + max + "." );
-				return false;
-			} else {
-				return true;
-			}
-		}
-
-		function checkRegexp( o, regexp, n ) {
-			if ( !( regexp.test( o.val() ) ) ) {
-				o.addClass( "ui-state-error" );
-				updateTips( n );
-				return false;
-			} else {
-				return true;
-			}
-		}
-
-		function addUser() {
-			var valid = true;
-			allFields.removeClass( "ui-state-error" );
-
-			valid = valid && checkLength( name, "username", 3, 16 );
-			valid = valid && checkLength( email, "email", 6, 80 );
-			valid = valid && checkLength( password, "password", 5, 16 );
-
-			valid = valid && checkRegexp( name, /^[a-z]([0-9a-z_\s])+$/i, "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
-			valid = valid && checkRegexp( email, emailRegex, "eg. ui@jquery.com" );
-			valid = valid && checkRegexp( password, /^([0-9a-zA-Z])+$/, "Password field only allow : a-z 0-9" );
-
-			if ( valid ) {
-				$( "#users tbody" ).append( "<tr>" +
-					"<td>" + name.val() + "</td>" +
-					"<td>" + email.val() + "</td>" +
-					"<td>" + password.val() + "</td>" +
-					"</tr>" );
-				dialog.dialog( "close" );
-			}
-			return valid;
-		}
-
-		dialog = $( "#dialog-form" ).dialog({
-			autoOpen: false,
-			modal: true,
-			buttons: {
-				"بستن": function() {
-					dialog.dialog( "close" );
-					// window.location.reload();
-				}
-			},
-			close: function() {
-				// form[ 0 ].reset();
-				allFields.removeClass( "ui-state-error" );
-			}
-		});
-
-		form = dialog.find( "form" ).on( "submit", function( event ) {
-			event.preventDefault();
-			addUser();
-		});
-
-		$( "#create-user" ).button().on( "click", function() {
-			dialog.dialog( "open" );
-		});
-	});
-</script>
 {%endblock%}
