--- a/portal/education/option/display.html
+++ b/portal/education/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="education/{{global.url}}">
 {{forms.make(form.education)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
