--- a/portal/country/option/display.html
+++ b/portal/country/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="country/{{global.url}}">
 	{{forms.make(form.country)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
