--- a/portal/education/users/display.html
+++ b/portal/education/users/display.html
@@ -4,4 +4,5 @@
 <form class="ajx" method="post" action="education/users/{{global.url}}">
 	{{forms.make(form.education_users)}}
 </form>
+{{tagMaker.list(list)}}
 {%endblock%}
