--- a/portal/teachinghistory/option/display.html
+++ b/portal/teachinghistory/option/display.html
@@ -5,4 +5,5 @@
 <form class="ajx" method="post" action="teachinghistory/{{global.url}}">
 	{{forms.make(form.teachinghistory)}}
 </form>
+{{tagMaker.list(list)}}
 {%endblock%}
