--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -10,7 +10,7 @@
 
 <!-- classes list -->
 <div class="class-detail">
-	{{ tagMaker.list(classes_list) }}
+	{{dtable.make(dataTable)}}
 </div>
 
 {%endblock%}
