--- a/portal/users/learn/display.html
+++ b/portal/users/learn/display.html
@@ -1,9 +1,8 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-{{tagMaker.card(person)}}
-{{tagMaker.card(users)}}
-{{tagMaker.card(bridge)}}
-{{tagMaker.card(olddb)}}
-{{tagMaker.card(person_extera)}}
+{{tagMaker.card(classification)}}
+{{tagMaker.card(price)}}
+{{tagMaker.card(absence)}}
+{{tagMaker.card(certification)}}
 {%endblock%}
