teacher, icon, classes, place multiclass

--- a/portal/teacher/person/display.html
+++ b/portal/teacher/person/display.html
@@ -1,7 +1,5 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-{{tagMaker.card(person)}}
-{{tagMaker.card(bridge)}}
-{{tagMaker.card(person_extera)}}
+{{tagMaker.detail(list)}}
 {%endblock%}
