--- a/portal/users/detail/display.html
+++ b/portal/users/detail/display.html
@@ -1,9 +1,9 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
+<!-- <a href= "" class="icoshare"></a> -->
 {{tagMaker.card(person)}}
 {{tagMaker.card(users)}}
 {{tagMaker.card(bridge)}}
-{{tagMaker.card(olddb)}}
 {{tagMaker.card(person_extera)}}
 {%endblock%}
