--- a/portal/users/learn/display.html
+++ b/portal/users/learn/display.html
@@ -2,6 +2,7 @@
 {% extends layout %}
 {%block content%}
 {{tagMaker.card(classification)}}
+{{tagMaker.card(olddb)}}
 {{tagMaker.card(price)}}
 {{tagMaker.card(absence)}}
 {{tagMaker.card(certification)}}
