validation fuck me but fixed :|

--- a/portal/teacher/extera/display.html
+++ b/portal/teacher/extera/display.html
@@ -1,6 +1,6 @@
 {% extends layout %}
 {% block content %}
-<form class="ajx" method="post" action="person/extera/{{global.url}}">
+<form class="ajx" method="post" action="teacher/extera/status=add/{{global.url}}">
 	{{forms.make(form.person_extera)}}
 </form>
 {%endblock%}
