--- a/portal/permission/option/display.html
+++ b/portal/permission/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="permission/{{global.url}}">
 	{{forms.make(form.permission)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
