--- a/portal/absence/classes/display.html
+++ b/portal/absence/classes/display.html
@@ -1,8 +1,47 @@
 {# Ahamd karimi #}
 {% extends layout %}
 {%block content%}
-<form class="ajx" method="post" action="absence/{{global.url}}">
-	{{forms.make(form.absence)}}
-</form>
-{{tagMaker.list(list)}}
+<a>fuck</a>
+<!-- classes detail -->
+<div class="class-detail">
+	{{ tagMaker.list(list) }}
+</div>
+
+<!-- classes list -->
+<div class="class-detail">
+	{{dtable.make(dataTable)}}
+</div>
+<script type="text/javascript">
+	function l(a) {console.log(a);}
+
+	$(".absence-date-main")[0].callBackDate =  function(){
+		date = convert_date($(this).val());
+		l(date);
+	}
+	
+	$("a").click(function(){
+		alert("fsdfs");
+		return false;
+	});
+
+	$("a.insertAbsenceApi").click(function(){
+		l("function");
+		alert("fsdfs");
+		
+		return false;
+	});
+
+
+	function convert_date(date) {
+		date = date.split("-");
+		if(date[0].length == 4) y = date[0];
+		if(date[1].length != 2) {
+			m = "0" + date[1];
+		}
+		if(date[2].length != 2) {
+			d = "0" + date[2];
+		}
+		return y + "" + m + "" + d;
+	}
+</script>
 {%endblock%}
