error select tag a whit class

--- a/portal/absence/classes/display.html
+++ b/portal/absence/classes/display.html
@@ -1,7 +1,7 @@
 {# Ahamd karimi #}
 {% extends layout %}
 {%block content%}
-<a>fuck</a>
+<a class="insertAbsenceApi">fuck</a>
 <!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
@@ -20,7 +20,7 @@
 	}
 	
 	$("a").click(function(){
-		alert("fsdfs");
+		alert("ddddddddddddd");
 		return false;
 	});
 
