--- a/portal/absence/classes/display.html
+++ b/portal/absence/classes/display.html
@@ -1,7 +1,8 @@
 {# Ahamd karimi #}
 {% extends layout %}
 {%block content%}
-
+<!-- <a class="icouser"></a>
+<a class="icolikes"></a> -->
 <!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
