--- a/portal/users/learn/absence/display.html
+++ b/portal/users/learn/absence/display.html
@@ -2,5 +2,5 @@
 {% extends layout %}
 {%block content%}
 <p>{{global.users_datail}}</p>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
