--- a/portal/bridge/option/display.html
+++ b/portal/bridge/option/display.html
@@ -1,7 +1,17 @@
 {# reza mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {% block content %}
-<a href="bridge/status=add/usersid={{global.users_id}}">افزودن</a>
+<style type="text/css">
+	.addB {
+		background: #f0f9f0;
+		padding: 10px;
+		position: absolute;
+	}
+</style>
+<div class="addB">
+	<a class="icodadd" style="margin-right : 0px" href="bridge/status=add/usersid={{global.users_id}}"></a>
+
+</div>
 <br>
 <form class="ajx" method="post" action="bridge/{{global.url}}">
 	{{forms.make(form.bridge)}}
