--- a/portal/classification/printlist/display.html
+++ b/portal/classification/printlist/display.html
@@ -64,6 +64,7 @@
 	</style>
 {%endblock%}
 {% block body %}
+	<br><br>
 	<div class="class-details colory">
 	{% for key, header in detail.header %}
 		<div class="class-detail normal-font">
@@ -102,21 +103,21 @@
 	  	</tr>
 	  	<tr>
 	    	<td class="small-font">تاریخ</td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
-	    	<td class="small-font"></td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
+	    	<td class="small-font"> ... / ... / ...  </td>
 	  	</tr>
 	  	<!-- end of header -->
 
