--- a/portal/users/detail/display.html
+++ b/portal/users/detail/display.html
@@ -5,5 +5,6 @@
 {{tagMaker.card(person)}}
 {{tagMaker.card(users)}}
 {{tagMaker.card(bridge)}}
+{{tagMaker.card(olddb)}}
 {{tagMaker.card(person_extera)}}
 {%endblock%}
