--- a/portal/score/classes/display.html
+++ b/portal/score/classes/display.html
@@ -1,5 +1,6 @@
 {% extends layout %}
 {% block content %}
+{{tagMaker.make(select)}}
 <h3>ثبت نمرات {{global.score_type}} کلاس</h3>
 <!-- classes detail -->
 <div class="class-detail">
