--- a/portal/score/score/display.html
+++ b/portal/score/score/display.html
@@ -5,6 +5,8 @@
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
-<br>
-{{tagMaker.detail(a)}}
+<!-- classes list -->
+<div class="class-detail">
+	{{dtable.make(dataTable)}}
+</div>
 {%endblock%}
