--- a/portal/classification/printlist/hefzList.html
+++ b/portal/classification/printlist/hefzList.html
@@ -1,162 +1,168 @@
 <br>
 <style type="text/css">
-     .xprn {
-        display: block; 
-        page-break-before:always;
-        margin: 0;
-        padding: 0;
-      }
-      @page {
-        margin: 1cm;
-        padding: 1cm
-      }
+	.cls1{
+		width:61px;
+	}
+	.cls2{
+		width:180px;
+	}
+	.cls3{
+		width:135px;
+	}
+
+	table{
+		page-break-inside:avoid;
+		page-break-after:auto;
+		border-collapse: collapse;
+	}
+	td{
+		height:23px;
+	}
 </style>
 <div class="class-details colory">
-{% for key, header in detail.header %}
+	{% for key, header in detail.header %}
 	<div class="class-detail normal-font">
 		<div class="class-detail-title">{{header|lang}}:</div>
 		<div class="class-detail-value">{{detail.list[0][key]|lang}}</div>
 	</div>
-{%endfor%}
-	
+	{%endfor%}
+
 
 	<div style="clear:both"></div>
 </div>
-
 <table  cellspacing="0" border="0">
-    <tr class="prn">
-        <td rowspan="3" class="small-font system-default">ردیف</td>
-        <td colspan="2" class="system-default small-font">ایام هفته</td>
-        <td class="small-font system-default">شنبه</td>
-        <td class="small-font system-default colory">يکشنبه</td>
-        <td class="small-font system-default">دوشنبه</td>
-        <td class="small-font system-default colory">سه شنبه</td>
-        <td class="small-font system-default">چهار شنبه</td>
-        <td class="small-font system-default colory">پنجشنبه</td>
-        <td class="small-font system-default">شنبه</td>
-        <td class="small-font system-default colory">يکشنبه</td>
-        <td class="small-font system-default">دوشنبه</td>
-        <td class="small-font system-default colory">سه شنبه</td>
-        <td class="small-font system-default">چهار شنبه</td>
-        <td class="small-font system-default colory">پنجشنبه</td>
-    </tr>
-    <tr class="prn">
-        <td colspan="2"class="small-font system-default">تاریخ</td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        <td class="small-font system-default">... / ... / ... </td>
-        <td class="small-font system-default colory">... / ... / ... </td>
-        
-    </tr>
-    <tr class="prn">
-        <td colspan="2"class="small-font system-default">محدوده حفظ</td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>
-        <td class="small-font system-default">صفحه: ..... </td>
-        <td class="small-font system-default colory">صفحه: ..... </td>    
-    </tr>
-    {% for key, list in list %}
-     <tr class="prn">
-        <td rowspan="5" class="normal-font">{{key + 1}}</td>
-        <td rowspan="2" class="normal-font">{{list.name}}  {{list.family}}</b></td>
-        <td class="small-font system-default">حفظ جدید</td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-    </tr>
-    <tr class="prn">
-        <td class="small-font system-default" >درس گذشته</td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td> 
-    </tr>
-    <tr class="prn">
-        
-        <td class="normal-font">{{list.phone}}</td>
-        <td class="small-font system-default" >20 درس</td>
-      <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-    </tr>
-    <tr class="prn">
-        <td class="normal-font">{{list.mobile}}</td>
-        <td class="small-font system-default" >مرور 2</td>
-      <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-    </tr>
-    <tr class="prn">
-        <td class="normal-font">{{list.username}}</td>
-        <td class="small-font system-default">مفاهیم</td>
-       <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-        <td class="colory"></td>
-        <td></td>
-    </tr>
-    {%if key == 2%}
-    <tr class="xprn"></tr>
-    {%elseif (key+1)%4 == 0 and key+1 != 4%}
-    <tr class="xprn"></tr>
-    {%endif%}
-    {%endfor%}
+	<tr>
+		<td rowspan="3" class="cls1 small-font system-default">ردیف</td>
+		<td rowspan="3" class="cls2 system-default small-font">مشخصات</td>
+		<td class="cls3 system-default small-font">ایام هفته</td>
+		<td class="small-font system-default">شنبه</td>
+		<td class="small-font system-default colory">يکشنبه</td>
+		<td class="small-font system-default">دوشنبه</td>
+		<td class="small-font system-default colory">سه شنبه</td>
+		<td class="small-font system-default">چهار شنبه</td>
+		<td class="small-font system-default colory">پنجشنبه</td>
+		<td class="small-font system-default">شنبه</td>
+		<td class="small-font system-default colory">يکشنبه</td>
+		<td class="small-font system-default">دوشنبه</td>
+		<td class="small-font system-default colory">سه شنبه</td>
+		<td class="small-font system-default">چهار شنبه</td>
+		<td class="small-font system-default colory">پنجشنبه</td>
+	</tr>
+	<tr>
+		<td class="small-font system-default">تاریخ</td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+		<td class="small-font system-default">... / ... / ... </td>
+		<td class="small-font system-default colory">... / ... / ... </td>
+
+	</tr>
+	<tr>
+		<td class="small-font system-default">محدوده حفظ</td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>
+		<td class="small-font system-default">صفحه: ..... </td>
+		<td class="small-font system-default colory">صفحه: ..... </td>    
+	</tr>
 </table>
+
+{% for key, list in list %}
+<table  cellspacing="0" border="0">
+	<tr>
+		<td rowspan="5" class="cls1 normal-font">{{key + 1}}</td>
+		<td rowspan="2" class="cls2 normal-font">{{list.name}}  {{list.family}}</b></td>
+		<td class="cls3 small-font system-default">حفظ جدید</td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="small-font system-default" >درس گذشته</td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td> 
+	</tr>
+	<tr>
+
+		<td class="normal-font">{{list.phone}}</td>
+		<td class="small-font system-default" >20 درس</td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="normal-font">{{list.mobile}}</td>
+		<td class="small-font system-default" >مرور 2</td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="normal-font">{{list.username}}</td>
+		<td class="small-font system-default">مفاهیم</td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+		<td class="colory"></td>
+		<td></td>
+	</tr>
+</table>
+{%endfor%}
